--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
 
         </section>
         <section class="s3">
-            <h1>Space for Adver</h1>
+            <h1>Space for Advertisement</h1>
         </section>
     </main>
 </body>
+
 
 </html>
